[package]
name = "ilovelocalpdf"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlElement",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
lopdf = { version = "0.34", default-features = false, features = ["nom_parser"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen-futures = "0.4"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0.150"

[dependencies.flate2]
version = "1.0"
default-features = false
features = ["rust_backend"]

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
panic = "abort"

[profile.dev]
panic = "abort"
